# blockstead

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEX_SYSTEM_PROMPT.md  CONTRIBUTING.md  Dockerfile  Install Blockstead.desktop  LICENSE  README.md  SECURITY.md  compose.yaml  docker.env.example  update.md
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_schedules.py  0003_schedule_profile_unique.py  0004_backups.py  0005_backup_manifests.py  0006_loader_versions.py  0007_metric_samples.py  0008_automation_upgrade.py  0009_app_secrets.py  0010_backup_destinations.py  0011_activity_notifications.py  0012_player_sessions.py
backend/tests/: conftest.py  test_activity_api.py  test_auth_api.py  test_backup_api.py  test_backups.py  test_cli.py  test_command_catalog.py  test_curseforge.py  test_database_migrations.py  test_diagnostics.py  test_diagnostics_api.py  test_distributions.py  test_extension_api.py  test_extension_ops.py  test_extensions.py  test_file_paths.py  test_file_workspace_api.py  test_hangar.py  test_import_scan.py  test_import_upload_api.py  test_lifecycle_api.py  test_management_api.py  test_mod_config_api.py  test_mod_configs.py  test_modpack_api.py  test_modpacks.py  test_modrinth.py  test_overview.py  test_player_sessions.py  test_players_roster_api.py  test_process.py  test_provision_api.py  test_provisioning.py  test_restore.py  test_scheduler.py  test_security.py  test_server_files.py  test_settings_api.py  test_settings_raw_api.py  test_shared_map.py  (+5 more)
(+158 files in other folders)
