[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "blockstead"
version = "0.1.0"
description = "Local-first Minecraft Java server manager"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.18.5",
  "argon2-cffi==25.1.0",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "pydantic-settings==2.14.2",
  "psutil==7.1.3",
  "sqlalchemy==2.0.51",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "mypy==1.15.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.3.0",
  "ruff==0.9.7",
  "types-psutil==7.0.0.20251001",
]

[project.scripts]
blockstead = "blockstead.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blockstead"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
